# zoetic-space-api

./: .gitignore  Gemfile  Guardfile  LICENSE  README.md  runserver.sh  zoetic-api.cabal  zoetic-space-api.cabal
driver/: Main.hs
src/: Main.hs
src/Api/: Users.hs
src/ZoeticSpace/: Application.hs  Persistence.hs  Validation.hs
src/ZoeticSpace/Api/: Users.hs
tests/: Helper.hs  Main.hs
