name:                zoetic-space-api
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            zoetic.space
license:             AGPL-3
license-file:        LICENSE
author:              Zoetic Community
maintainer:          jeff@jetaggart.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable zoetic-space-api
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
    base >=4.7 && <4.8
    , scotty ==0.9.1
    , aeson ==0.8.0.2
    , hypher ==0.1.5
    , unordered-containers ==0.2.*
    , text >= 1.1 && < 1.3
    , transformers ==0.4.*
    , string-conversions ==0.3.0.3
    , bytestring ==0.10.*
    , http-types ==0.8.5

  hs-source-dirs:      src
  default-language:    Haskell2010