name:                zoetic-space-api
version:             0.1.0.0
homepage:            zoetic.space
license:             AGPL-3
license-file:        LICENSE
author:              Zoetic Community
maintainer:          jeff@jetaggart.com
category:            Web
build-type:          Simple
cabal-version:       >=1.22

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   ZoeticSpace.Application
                     ZoeticSpace.Persistence
                     ZoeticSpace.Validation
                     ZoeticSpace.Api.Users
  ghc-options:       -Wall -fwarn-tabs -O0

  build-depends: base >=4.7 && <4.8
               , scotty ==0.9.1
               , aeson ==0.8.0.2
               , hypher ==0.1.5
               , unordered-containers ==0.2.*
               , text >= 1.1 && < 1.3
               , transformers ==0.4.*
               , string-conversions ==0.3.0.3
               , bytestring ==0.10.*
               , http-types ==0.8.5
               , wai ==3.0.2.2
               , warp ==3.0.9

executable zoetic-space-api
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      driver
  ghc-options:         -Wall
  build-depends: base
               , zoetic-space-api
               , warp

test-suite test
  default-language:    Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    tests
  ghc-options:       -Wall

  build-depends: base
               , zoetic-space-api
               , hspec >= 2.0.0
               , bytestring
               , http-types
               , wai
               , HUnit
               , QuickCheck
               , hspec >= 1.5.3
               , wai-extra >= 3
               , aeson
               , containers
